--- a/spinner_wheel_v3_2.html
+++ b/spinner_wheel_v3_2.html
@@ -61,7 +61,7 @@
 <body>
   <div class="wrap">
     <h1>Spin-Down Picker</h1>
-    <p class="sub">v3.2 — Fixes Add not appearing under some sort modes, adds scroll-into-view & highlight.</p>
+    <p class="sub">Custom Spinner</p>
 
     <div class="grid">
       <!-- Wheel -->
